fixed some alignment issues in calender

--- a/src/modules/ledgers/buyerLedger.scss
+++ b/src/modules/ledgers/buyerLedger.scss
@@ -780,8 +780,8 @@ thead{
     margin-top: 32px;
 }
 .react-datepicker{
-    margin-left: -50px;
-    margin-top: -70px;
+    // margin-left: -50px;
+    // margin-top: -70px;
 }
 .react-datepicker__input-container input{
     border: none;
